# wasmcloud-workshop

./: .env.sample  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  install.sh
.github/workflows/: deploy-central.yml
actors/: README.md
actors/couchbase-actor/: Cargo.toml  wadm.yaml  wasmcloud.toml
actors/couchbase-actor/src/: lib.rs
actors/hello-world/: Cargo.toml  wadm.yaml  wasmcloud.toml
actors/hello-world/src/: lib.rs
actors/hello-world/wit/: world.wit
central-node/: README.md  docker-compose.yml  init-couchbase.sh  nats-server.conf  start.sh  wadm.yaml  wasmcloud.toml
edge-node/: README.md  connect-to-cloud.sh  deploy-actor.sh  nats-server.conf  wasmcloud.toml
instructor/: AGENDA.md  FACILITATION_INSTRUCTIONS.md
providers/couchbase/: Dockerfile  README.md  wasmcloud.toml
providers/nats/: Dockerfile  README.md  start.sh  stop.sh  wasmcloud.toml
