[package]
name = "couchbase-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmcloud-interface-httpserver = "0.12.0"
wasmcloud-interface-logging = "0.10.0"
wasmcloud-interface-couchbase = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
